zgc consumes too much memory